--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, "feat/*" ]
   pull_request:
     branches: [ main ]
 
@@ -22,8 +22,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+
       
       - name: Log in to the Container registry
         uses: docker/login-action@v1
@@ -43,11 +52,11 @@ jobs:
       - name: Prepare files
         run: ./build.sh
 
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v2
-        with:
-          context: ./build/
-          push: ${{ github.event_name != 'pull_request' }}
-          build-args: ENABLED_MODULES=fancyindex
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+#      - name: Build and push Docker image
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: ./build/
+#          push: ${{ github.event_name != 'pull_request' }}
+#          build-args: ENABLED_MODULES=fancyindex
+#          tags: ${{ steps.meta.outputs.tags }}
+#          labels: ${{ steps.meta.outputs.labels }}
