--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,11 +52,12 @@ jobs:
       - name: Prepare files
         run: ./build.sh
 
-#      - name: Build and push Docker image
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: ./build/
-#          push: ${{ github.event_name != 'pull_request' }}
-#          build-args: ENABLED_MODULES=fancyindex
-#          tags: ${{ steps.meta.outputs.tags }}
-#          labels: ${{ steps.meta.outputs.labels }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./build/
+          platforms: linux/amd64,linux/arm64
+          push: false
+          build-args: ENABLED_MODULES=fancyindex
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
