--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,15 +2,13 @@ name: Build Pipeline
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, "feat/*" ]
   pull_request:
     branches: [ main ]
 
   workflow_dispatch:
 
 env:
-  # Use docker.io for Docker Hub if empty
-  REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
   
 jobs:
@@ -34,12 +32,18 @@ jobs:
         run: echo ${{ steps.buildx.outputs.platforms }}
 
       
-      - name: Log in to the Container registry
+      - name: Log in to the ghcr.io container registry
         uses: docker/login-action@v1
         with:
-          registry: ${{ env.REGISTRY }}
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -57,7 +61,7 @@ jobs:
         with:
           context: ./build/
           platforms: linux/amd64,linux/arm64
-          push: ${{ github.event_name != 'pull_request' }}
+          push: ${{ github.event_name != 'pull_request' && github.ref_name == 'main'}}
           build-args: ENABLED_MODULES=fancyindex
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
